# Granite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build-libs.yml  ci.yml
android/: README.md
android/GraniteDemo/: gradle.properties  settings.gradle
android/GraniteDemo/app/: build.gradle
android/GraniteDemo/app/src/main/: AndroidManifest.xml
android/GraniteDemo/app/src/main/assets/granite_spv/: .keep  flash_attn_split_k_reduce.comp.spv  mul_mat_split_k_reduce.comp.spv  ssm_conv.comp.spv
android/GraniteDemo/app/src/main/cpp/: CMakeLists.txt
android/GraniteDemo/app/src/main/java/com/granite/: GraniteNative.java  MainActivity.java
document/: API_REFERENCE.md  INTEGRATION_ANDROID.md  INTEGRATION_IOS.md  MEMORY_BUDGETS.md  MODEL_CONVERSION.md  PERFORMANCE_TUNING.md  README.md
examples/: basic.cpp
include/granite/: backend.h  config.h  coreml_attention.h  coreml_ffn.h  crash.h  error.h  gguf.h  granite.h  graph.h  llm.h  log.h  memory.h  metal_compute.h  onnx.h  operators.h  optimization.h  scheduler.h  tensor.h  types.h
scripts/: build_android.sh  build_linux_vulkan.sh  download_metal_cpp.sh  measure_power.sh  precompile_vulkan_shaders.sh  run_leak_check.sh
shaders/metal/: elementwise.metal  matmul.metal  normalization.metal
shaders/vulkan/: README.md
src/android/: granite_jni.cpp
src/backend/coreml/: coreml_attention.mm  coreml_ffn.mm
src/backend/cpu/: cpu_backend.cpp
src/backend/metal/: metal_backend.mm  metal_buffer.mm  metal_compute.mm  metal_pipeline.mm
src/backend/metal/kernels/: kernel_types.h  metal_shaders.h  metal_shaders_attention.h  metal_shaders_common.h  metal_shaders_quant.h  metal_shaders_util.h
src/backend/metal/shaders/: quantized_matmul.metal
src/backend/vulkan/: vulkan_backend.cpp  vulkan_compute.cpp  vulkan_compute.h
src/core/: backend_factory.cpp  config.cpp  crash.cpp  error.cpp  memory_manager.cpp  operator_registry.cpp  tensor.cpp
src/graph/: graph.cpp  optimization.cpp  scheduler.cpp
src/llm/: batch_scheduler.cpp  kv_cache.cpp  kv_cache_pool.cpp  llm.cpp  llm_internal.h  math_ops.cpp  math_ops.h  model_config.cpp  paged_kv_cache.cpp  rope.cpp  runner.cpp  speculation_tree.cpp  speculative_runner.cpp  tokenizer.cpp  transformer.mm
src/model/: gguf.cpp  onnx.cpp
src/operators/cpu/: cpu_operators.cpp
src/operators/metal/: metal_operators.mm
src/operators/vulkan/: vulkan_operators.cpp
tests/: test_config.cpp  test_gguf.cpp  test_graph.cpp  test_llm.cpp  test_main.cpp  test_memory.cpp  test_onnx.cpp  test_operator_correctness.cpp  test_operators.cpp  test_optimization.cpp  test_scheduler.cpp  test_stress.cpp  test_tensor.cpp  test_types.cpp  test_vulkan.cpp
tools/: benchmark.cpp  benchmark_attention.mm  benchmark_matmul_gpu.mm  benchmark_matvec.mm  benchmark_paged_attention.mm  benchmark_tree_batching.cpp  benchmark_vs_llamacpp.cpp  benchmark_vs_llamacpp.sh  compare_benchmark.sh  detailed_benchmark.mm  detailed_compare.sh  measure_alloc.mm  measure_overhead.mm  onnx_smoke.cpp  pipeline_test.mm  profile_prefill_kernels.mm  profile_q4k.mm  stress_inference.cpp  test_coreml_ane.mm  test_paged_flash_attention.mm  test_simdgroup_matmul.mm
